New in v1.2.6 (????/??/??)
---------------------------

Fix --override-chars-to-quote option. (Andrew Ferguson)


New in v1.2.5 (2009/01/06)
---------------------------

Fix typo in robust.py which broke error reporting. Closes Savannah bug #25255.

Ignore Windows errors caused by too long filenames; the files are not yet
backed-up, but the backup process is no longer halted. (Andrew Ferguson)


New in v1.2.4 (2009/01/01)
---------------------------

Disable escaping trailing spaces and periods for now since it broke remote
restores. Thanks to Dominic for reporting the issue. (Andrew Ferguson)


New in v1.2.3 (2008/12/28)
---------------------------

The official Windows build now includes the librsync patch for files > 4GB.
This requires the Visual C++ 2008 redistributable, available from Microsoft.

The epoch is now a valid date. Closes Savannah bug #24814. (Andrew Ferguson)

Report that connection has dropped if filesystem operation returns ENOTCONN.
Closes Ubuntu bug #219920. (Andrew Ferguson)

Print a more helpful error message if we get an error while reading an old
current_mirror marker. This can happen because it has been locked or deleted
by a just-finished rdiff-backup process. Closes Ubuntu bugs #88140 and
#284506. (Andrew Ferguson)

Do not backup reparse points on native Windows. Thanks to John Covici for
reporting the issue. (Andrew Ferguson)

Support comments in rdiff-backup's ACL files and quote the quoting character
properly if user changed it. (Patch from Oliver Mulatz)

Print a more helpful error message if we cannot read the backup destination.
Closes Ubuntu bug #292586 (again). (Andrew Ferguson)

Print a more helpful error message if we cannot write to the backup
destination. (Andrew Ferguson)

Add ETIMEDOUT to the list of recoverable errors; when irrecoverable, a
ConnectionError is raised. Closes Ubuntu bug #304659. (Andrew Ferguson)

Suppress warnings about the deprecated sha module in Python 2.6. We'll remove